--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -5,7 +5,7 @@ target/
 !**/src/test/**/target/
 
 ### Properties ###
-!**/src/main/resources/application.properties
+**/src/main/resources/application.properties
 
 ### STS ###
 .apt_generated
