--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/frontbackproject
 spring.datasource.username=root
-spring.datasource.password=test
+spring.datasource.password=testee
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ## JPA
 spring.jpa.show-sql=true
