--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-
+## DataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/project
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+## JPA
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto= create-drop
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
+#Server configuration
+server.error.include-message=always
