--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+!**/target/project-0.0.1-SNAPSHOT.jar
 
 ### Properties ###
 **/src/main/resources/application.properties
