--- a/backend/src/main/resources/docker-compose.yml
+++ b/backend/src/main/resources/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       MYSQL_ROOT_PASSWORD: rootPassword
       MYSQL_DATABASE: project
   project:
-    image: project
+    image: projectBackendFrontend
     ports:
       - "8080:8080"
     environment:
