--- a/backend/src/main/resources/docker-compose.yml
+++ b/backend/src/main/resources/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/userside
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/backend
       SPRING_DATASOURCE_USERNAME: user
       SPRING_DATASOURCE_PASSWORD: pass
     depends_on:
