--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 ## DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/userside
+spring.datasource.url=jdbc:mysql://localhost:3306/frontbackproject
 spring.datasource.username=root
-spring.datasource.password=test123
+spring.datasource.password=Rrs1748?
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ## JPA
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 #Server configuration
