--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 #Image that we are using
 FROM openjdk:11
-ADD target/project-0.0.1-SNAPSHOT.jar project.jar
+ADD target/FrontBackProject.jar project.jar
 #EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "project.jar"]
