--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/project
+spring.datasource.url=jdbc:mysql://localhost:3306/frontbackproject
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=Rrs1748?
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ## JPA
 spring.jpa.show-sql=true
