--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-!**/target/project-0.0.1-SNAPSHOT.jar
+!**/target/FrontBackProject.jar
 
 ### Properties ###
 **/src/main/resources/application.properties
